transition on mobile header fix

--- a/src/Layout/Header/index.css
+++ b/src/Layout/Header/index.css
@@ -29,6 +29,7 @@
   width: 100%;
   height: 100%;
   z-index: 1;
+  opacity: 1;
   background-color: #506670ea;
   color: white;
   animation: fadeIn 0.5s;
@@ -36,6 +37,8 @@
 
 .closed {
   display: none;
+  opacity: 0;
+  animation: fadeOut 0.5s;
 }
 
 .app_header_divider {
@@ -57,5 +60,14 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
